# omx-indix

./: README.md
3dfiles/parts/: Arm Base Disc.step  Arm Rod Long.step  Arm Rod Short.step  frame-part-1.step  frame-part-2.step  frame-part-3.step  frame-part-4.step  frame-part-5.step
code/: demo.py  gripper_control.py  multi_teleop.py  teleop.py
roboticarm/: readme.md
roboticarm/src/rparm/: CMakeLists.txt  package.xml
roboticarm/src/rparm/config/: hardware_controller_manager.yaml  initial_positions.yaml  ros2_controllers.yaml
roboticarm/src/rparm/gazebo/: rparm.gazebo.xacro
roboticarm/src/rparm/launch/: rparm_bringup.launch.py  rparm_gazebo.launch.py
roboticarm/src/rparm/ros2_control/: rparm_position.ros2_control.xacro
roboticarm/src/rparm/rviz/: rparm.rviz
roboticarm/src/rparm/urdf/: rparm.urdf.xacro  rparm_arm.urdf.xacro
roboticarm/src/st3215_bridge/: package.xml  setup.cfg  setup.py
roboticarm/src/st3215_bridge/st3215_bridge/: st3215_bridge_node.py
roboticarm/src/teleop/: arm_nudge.py  ros2_multi_teleop.py  teleop.py
