<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rparm</name>
  <version>0.1.0</version>
  <description>RPARM robot description/bringup mirroring OpenManipulator-X.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>position_controllers</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>open_manipulator_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
